# VisualDL

./: .clang_format.hook  .dockerignore  .eslint_format.hook  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.demo  README-ch.md  README-en-new.md  README-en.md  README.cn.md  README.md  README_CN.md  RELEASE.md  UserGuide-en.md  UserGuide-final-hxy0706.md  UserGuide-final-syx0706.md  VERSION_NUMBER  build.ps1  build.sh  docker-compose.demo.yml  docker-compose.yml  luckydraw.md  package.json  requirements.txt  setup.py  stub.cc  tests.sh  tmp6b9qg73f.tar  tmpe06l54tk.tar  tmpexwzsxno.tar
.github/workflows/: build.yml  lint.yml
backend/storage/: storage.proto
demo/: README.md  demo_cn.rst  demo_en.rst  model_debug_test.py  process_data_test.py  vdl_create_scratch_log  vdl_scratch.py
demo/caffe2/: TUTORIAL_EN.md  caffe2_mnist_demo.py
demo/component/: README.md  README_cn.md  audio-demo.py  audio_demo.py  embedding-demo.py  embeeding_demo.py  graph-demo.py  graph_demo.py  histogram-demo.py  histogram_demo.py  image-demo.py  image_demo.py  scalar-demo.py  scalar_demo.py  text-demo.py  text_demo.py
demo/components/: audio_test.py  cond_inside_cond_test.py  cond_test.py  figure_test.py  graph_test.py  high_dimensional_test.py  histogram_test.py  hparam_test.py  image_matrix_test.py  image_test.py  model_debug_test.py  model_visual_test.py  pir_graph_test.py  pir_program_test.py  pir_translate.py  pr_curve_test.py  process_data_test.py  profiler_test.py  program_test.py  roc_curve_test.py  scalar_test.py  scalars_test.py  test.sh  text_test.py  while_test.py
demo/keras/: TUTORIAL_CN.md  TUTORIAL_EN.md  keras_mnist_demo.py
demo/mxnet/: TUTORIAL_CN.md  TUTORIAL_EN.md  mxnet_demo.py
demo/paddle/: TUTORIAL_CN.md  TUTORIAL_EN.md  cifar10_image_classification_vgg.py  paddle_cifar10.py  paddlefluid_mnist.py  test_image_classification_train.py
demo/pytorch/: TUTORIAL_CN.md  TUTORIAL_EN.md  embedding_tutorial_ch.md  embedding_tutorial_en.md  pytorch_cifar10.ipynb  pytorch_cifar10.py  pytorch_word2vec.py
dev/: _init_build_env.sh
docs/: CMakeLists.txt  Graph Data Format.md  Paddle PIR Visualization.md  Plan.md  README-en.md  README.cn.md  README.md  README_CN.md  README_cn.md  backend_architecture.md  backend_architecture_en.md  conf.py  contribute_code_cn.md  contribute_code_en.md  data_structure.md  demo  faq.md  faq_CN.md  faq_EN.md  graph_data_format.md  how_to_dev_backend_en.md  how_to_dev_frontend_en.md  index.rst  index_cn.rst  index_en.rst  introduction_cn.md  introduction_en.md  menu.json  overview.md  quick_start_cn.md  quick_start_en.md  requirements.txt  visualization.md
docs/api/: index.rst  initialize_logger.rst  visualdl.rst  write_logs.rst
docs/components/: README.md  README_CN.md  UserGuide-en.md  UserGuide-final-syx0713.md
docs/components/fastdeploy_client/: README.md  README_CN.md
docs/components/fastdeploy_server/: README.md  README_CN.md
docs/components/profiler/: README.md  README_CN.md
docs/develop/: contribute_code_en.md  how_to_dev_backend_cn.md  how_to_dev_backend_en.md  how_to_dev_frontend_cn.md  how_to_dev_frontend_en.md  index_cn.rst  index_en.rst
docs/file_system/: BOS.md  HDFS.md
docs/getting_started/: demo  index_cn.rst  index_en.rst  installation_cn.md  installation_en.md  introduction_cn.md  introduction_en.md  quick_start_cn.md  quick_start_en.md
docs/introduction/: introduction.md  introduction_en.md
docs/io/: ContinueWriting.md  LogReader.md
docs/release/: README.md  build.sh  build_manylinux.md
docs/templates/: conf.py.cn.in  conf.py.en.in  layout.html
frontend/: .babelrc  .dockerignore  .eslintignore  .eslintrc.js  .fecsignore  .fecsrc  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  README.md  README_cn.md  babel.config.js  cli.js  ecosystem.config.js  i18n.ts  index.js  jest.config.js  lerna.json  license-header.js  lint-staged.config.js  next.config.js  next.config.ts  nuxt.config.ts  package.json  prettier.config.js  stylelint.config.js  tsconfig.json  tsconfig.server.json
frontend/app/: electron-builder.yml  package.json
frontend/cli/: package.json
frontend/components/: Aside.tsx  AsideDivider.tsx  Button.tsx  Chart.tsx  ChartPage.tsx  Checkbox.tsx  Content.tsx  Field.tsx  Icon.tsx  Image.tsx  Input.tsx  Layout.tsx  LineChart.tsx  Navbar.tsx  Pagination.tsx  Preloader.tsx  RadioButton.tsx  RadioGroup.tsx  RangeSlider.tsx  RunSelect.tsx  RunningToggle.tsx  SampleChart.tsx  ScalarChart.tsx  ScatterChart.tsx  SearchInput.tsx  Select.tsx  SmoothingSlider.tsx  StepSlider.tsx  Tag.tsx  TagFilter.tsx  Title.tsx
frontend/core/: babel.config.js  build.ts  package.json
frontend/deprecated/: App.san
frontend/hooks/: useClickOutside.ts  useDebounce.ts  useECharts.ts  useHeavyWork.ts  useRequest.ts  useSearchValue.ts  useTagFilter.ts
frontend/i18n/: middleware.js  package.json  tsconfig.json  types.d.ts
frontend/layouts/: default.tsx
frontend/lib/: dagre-d3.js
frontend/locales/: en.json  en.yml  zh.json  zh.yml
frontend/middleware/: i18n.ts
frontend/mock/: API.md  index.ts  package.json  runs.ts
frontend/modules/: locale.ts
frontend/pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  (+7 more)
frontend/wasm/: .gitignore  Cargo.toml  LICENSE  README.md
frontend/wasm/src/: main.rs
python/: log.py  util.py
scripts/: build.ps1  build.sh  check_style.sh  deploy_docs_on_travis.sh  setup.sh  setup_dev_env.sh  start_demo_server.sh  start_dev_server.sh  tests.sh  watch_frontend.sh
server/: build.sh  setup.py
visualdl/: __init__.py  test.cc  test.py  version.py
visualdl/backend/logic/: CMakeLists.txt  im.cc  im.h  im_test.cc  pybind.cc  sdk.cc  sdk.h  sdk.hpp  test.py
visualdl/logic/: CMakeLists.txt  histogram.h  histogram_test.cc  im.cc  im.h  im_test.cc  pybind.cc  sdk.cc  sdk.h  sdk_test.cc
visualdl/storage/: CMakeLists.txt  binary_record.cc  binary_record.h  entry.cc  entry.h  record.cc  record.h  storage.cc  storage.h  storage.proto  storage_test.cc  tablet.cc  tablet.h  test_binary_record.cc
(+469 files in other folders)
